--- a/src/main/resources/stylesheets/designer.css
+++ b/src/main/resources/stylesheets/designer.css
@@ -73,6 +73,13 @@ glyph text-lines {
 	kite9-layout: vertical;
 }
 
+symbol-text-line {
+	kite9-type: container;
+	kite9-sizing: minimize;
+	kite9-layout: grid;
+	kite9-grid-size: 2 1;
+} 
+
 
 context {
 	kite9-template: url(template.svg#context);
