--- a/src/main/resources/stylesheets/designer.css
+++ b/src/main/resources/stylesheets/designer.css
@@ -28,7 +28,7 @@ diagram {
 	kite9-type: diagram;
 	kite9-padding: 15px;
 	kite9-traversal: none;
-	kite9-template: url(template.svg#diagram)
+	kite9-template: url(template.svg#diagram);
 }
 
 glyph {
@@ -167,14 +167,14 @@ from.arrow,
 to.arrow {
 	kite9-marker-start-reference: url(template.svg#arrow-start-marker);
 	kite9-marker-end-reference: url(template.svg#arrow-end-marker);
-	kite9-padding: 5px 7px 5px 1px;
+	kite9-padding: 5px 12px 5px 1px;
 }
 
 from.arrow-open,
 to.arrow-open {
 	kite9-marker-start-reference: url(template.svg#open-arrow-start-marker);
 	kite9-marker-end-reference: url(template.svg#open-arrow-end-marker);
-	kite9-padding: 5px 7px 5px 1px;
+	kite9-padding: 5px 12px 5px 1px;
 }
 
 from.gap,
