--- a/src/test/resources/stylesheets/designer.css
+++ b/src/test/resources/stylesheets/designer.css
@@ -81,45 +81,40 @@ glyph {
 	kite9-connection-align: 50%;
 }
 
-diagram glyph symbols {
+glyph symbols {
 	kite9-type: container;
 	kite9-sizing: minimize;
-	kite9-occupies: 0 1 0 0;
+	kite9-occupies: 1 0;
 	kite9-layout: horizontal;
-	kite9-vertical-align: bottom;
 }
 
 diagram glyph label {
 	kite9-type: container;
 	kite9-sizing: minimize;
 	kite9-template: url(template.svg#glyph-label-text);
-	kite9-occupies: 0 1 1 1;
+	kite9-occupies: 0 0 0 0;
 	kite9-vertical-align: top;
-	kite9-margin: 5px;
-	text-align: middle;
+	kite9-margin: 5px 
 }
+
+/*
+ This rule handles the case where the label is after a stereotype, 
+ and therefore needs to appear on the line below
+*/
+diagram glyph stereotype + label {
+	kite9-occupies: 0 1 1 1;
+}
+
 
 glyph stereotype {
 	kite9-type: container;
 	kite9-template: url(template.svg#glyph-stereotype-text);
-	kite9-occupies: 0 1 0 0;
+	kite9-occupies: 0 0;
 	kite9-vertical-align: bottom;
 	kite9-horizontal-align: center;
 	kite9-margin: 0px 4px 2px 0px; 
-	kite9-sizing: minimize;
-	text-align: middle;
+	kite9-sizing: maximize;
 }
-
-diagram glyph symbols + stereotype {
-	kite9-occupies: 0 0 0 0;
-	text-align: start;
-}
-
-diagram glyph stereotype + symbols {
-	kite9-occupies: 1 1 0 0;
-	text-align: start;
-}
-
 
 glyph text-lines {
 	kite9-type: container;
@@ -143,17 +138,16 @@ symbol-text-line text {
 	kite9-horizontal-align: left;
 }
 
+symbol-text-line symbols {
+	kite9-sizing: maximize;
+	kite9-horizontal-align: right;
+	/* kite9-template: url(template.svg#show-box) */
+}
+
 show-box {
 	kite9-template: url(template.svg#show-box);
 	kite9-usage: decal;
 	kite9-type: svg;
-}
-
-symbol-text-line symbols {
-	kite9-sizing: maximize;
-	kite9-horizontal-align: right;
-	kite9-occupies: 1 1 0 0;
-	/* kite9-template: url(template.svg#show-box) */
 }
 
 context {
@@ -449,6 +443,7 @@ arrow > label > contents {
 	stroke: none;
 	fill: black;
 	font-family: "opensans-regular-webfont";
+	text-align: start;	
 	font-size: 10px;
 }
 
@@ -456,6 +451,7 @@ arrow > label > contents {
 	stroke: none;
 	fill: black;
 	font-family: "opensans-bold-webfont";
+	text-align: start;	
 	font-size: 10px;
 }
 
