--- a/src/test/resources/stylesheets/designer-with-script.css
+++ b/src/test/resources/stylesheets/designer-with-script.css
@@ -1,5 +1,43 @@
-
 @script url('diagram.js');
+
+@font-face {
+	font-family: "opensans-light-webfont";
+	src: url('../fonts/opensans-light-webfont.ttf') format('truetype');
+}
+
+@font-face {
+	font-family: "opensans-bold-webfont";
+	src: url('../fonts/opensans-bold-webfont.ttf') format('truetype');
+}
+
+@font-face {
+	font-family: "opensans-regular-webfont";
+	src: url('../fonts/opensans-regular-webfont.ttf') format('truetype');
+}
+
+/*
+ * Required so we can process old XML content
+ */
+renderingInformation,
+fromDecoration,
+toDecoration, 
+position,
+size,
+allLinks {
+	kite9-type: none;
+}
+
+/* Definitions of Kite9 Elements */
+
+context, 
+diagram,
+glyph,
+arrow,
+link {
+	kite9-margin: 10px;
+	kite9-link-inset: 10px;
+	kite9-link-gutter: 10px;
+}
 
 diagram {
 	kite9-type: diagram;
@@ -8,10 +46,37 @@ diagram {
 	kite9-template: url(template.svg#diagram);
 }
 
-show-box {
-	kite9-type: none;
+key {
+	kite9-type: container;
+	kite9-usage: label;
+	kite9-padding: 3px 6px 3px 6px; 
+	kite9-template: url(template.svg#key)
 }
 
+key body {
+	kite9-type: container;
+	kite9-layout: grid;
+	kite9-sizing: maximize;
+	kite9-grid-size: 1 3;
+	kite9-padding: 12px 12px 12px 12px;
+}
+
+key text-lines {
+	kite9-type: container;
+	kite9-sizing: maximize;
+	kite9-layout: vertical;
+	kite9-occupies: 0 2;
+}
+
+key boldText {
+	kite9-occupies: 0 0;
+}
+
+key bodyText {
+	kite9-occupies: 0 1;
+}
+
+/* GLYPH GENERAL SHAPE */
 
 glyph {
 	kite9-type: container;
@@ -22,10 +87,431 @@ glyph {
 	kite9-connection-align: 50%;
 }
 
+glyph symbols {
+	kite9-type: container;
+	kite9-sizing: minimize;
+	kite9-layout: horizontal;
+	kite9-margin: 5px 
+}
+
 diagram glyph label {
 	kite9-type: container;
 	kite9-sizing: minimize;
 	kite9-template: url(template.svg#glyph-label-text);
 	kite9-vertical-align: top;
 	kite9-margin: 5px 
+}
+
+glyph stereotype {
+	kite9-type: container;
+	kite9-template: url(template.svg#glyph-stereotype-text);
+	kite9-vertical-align: bottom;
+	kite9-horizontal-align: center;
+	kite9-margin: 5px; 
+	kite9-sizing: maximize;
+	text-align: middle;
+}
+
+glyph text-lines {
+	kite9-type: container;
+	kite9-sizing: maximize;
+	kite9-layout: vertical;
+}
+
+/* SYMBOLS */
+
+symbol-text-line {
+	kite9-type: container;
+	kite9-sizing: maximize;
+	kite9-layout: grid;
+	kite9-grid-size: 2 1;
+	kite9-connection-align: 50%;
+	/* kite9-template: url(template.svg#show-box); */
+} 
+
+key text-lines text-label,
+glyph text-lines text-label,
+symbol-text-line k9-text {
+	kite9-horizontal-align: left;
+}
+
+symbol-text-line symbols {
+	kite9-sizing: maximize;
+	kite9-horizontal-align: right;
+	kite9-occupies: 1 0;
+	margin: 0px;
+	/* kite9-template: url(template.svg#show-box) */
+}
+
+show-box {
+	kite9-template: url(template.svg#show-box);
+	kite9-usage: decal;
+	kite9-type: svg;
+}
+
+context {
+	kite9-template: url(template.svg#context);
+	kite9-type: container;
+	kite9-sizing: maximize;
+	kite9-traversal: always;
+	kite9-padding: 12px;	
+	kite9-link-inset: 12px;
+}
+
+cell > label, 
+context > label {
+	kite9-usage: label;
+	kite9-type: container; 
+	kite9-sizing: minimize;
+	kite9-template: url(template.svg#container-label);
+	kite9-padding: 4px;
+}
+
+grid {
+	kite9-template: url(template.svg#grid);
+	kite9-padding: 0px;
+	kite9-margin: 0px;
+	kite9-type: container;
+	kite9-sizing: maximize;
+	kite9-traversal: always;
+	kite9-layout: grid;
+}
+
+grid.triangles {
+	kite9-template: url(template.svg#grid-triangles);
+}
+
+cell {
+	kite9-template: url(template.svg#cell);
+	kite9-padding: 0px;
+	kite9-margin: 0px;
+	kite9-type: container;
+	kite9-sizing: maximize;
+	kite9-traversal: always;
+}
+
+toLabel, 
+fromLabel {
+	kite9-usage: label;
+	kite9-type: container; 
+	kite9-padding: 4px; 
+	kite9-sizing: minimize;
+	kite9-template: url(template.svg#connection-label);
+	kite9-margin: 4px;	
+}
+
+text-label {
+	kite9-horizontal-align: center;
+	kite9-vertical-align: center;
+}
+
+link {
+	kite9-type: link;
+	kite9-template: url(template.svg#link);
+}
+
+from,
+to {
+	kite9-type: link-end;
+	kite9-template: url(template.svg#empty-terminator);
+	kite9-padding: 5px 5px 5px 5px; 
+} 
+
+from.circle,
+to.circle {
+	kite9-marker-start-reference: url(template.svg#circle-marker);
+	kite9-marker-end-reference: url(template.svg#circle-marker);
+}
+
+from.arrow,
+to.arrow {
+	kite9-marker-start-reference: url(template.svg#arrow-start-marker);
+	kite9-marker-end-reference: url(template.svg#arrow-end-marker);
+	kite9-padding: 5px 12px 5px 1px;
+}
+
+from.arrow-open,
+to.arrow-open {
+	kite9-marker-start-reference: url(template.svg#open-arrow-start-marker);
+	kite9-marker-end-reference: url(template.svg#open-arrow-end-marker);
+	kite9-padding: 5px 12px 5px 1px;
+}
+
+from.gap,
+to.gap {
+	kite9-marker-reserve: 2px;
+}
+
+from.diamond, 
+to.diamond {
+	kite9-marker-start-reference: url(template.svg#diamond-start-marker);
+	kite9-marker-end-reference: url(template.svg#diamond-end-marker);
+	kite9-padding: 5px 12px 5px 1px;
+}
+
+from.diamond-open, 
+to.diamond-open {
+	kite9-marker-start-reference: url(template.svg#open-diamond-start-marker);
+	kite9-marker-end-reference: url(template.svg#open-diamond-end-marker);
+	kite9-padding: 5px 12px 5px 1px;
+}
+
+from.barbed-arrow, 
+to.barbed-arrow {
+	kite9-marker-start-reference: url(template.svg#barbed-arrow-start-marker);
+	kite9-marker-end-reference: url(template.svg#barbed-arrow-end-marker);
+	kite9-padding: 5px 7px 5px 1px;
+}
+
+
+/* Symbols */
+
+symbols {
+	kite9-type: container;
+	kite9-sizing: minimize;
+	kite9-layout: horizontal;
+	kite9-occupies: 1 0;
+}
+
+symbol {
+	kite9-type: svg;
+	kite9-margin: 0 2px 0 2px;
+	kite9-sizing: minimize;
+	kite9-connection-align: 50%;
+	kite9-link-inset: 0px;
+}
+
+symbol.circle {
+	kite9-template: url(template.svg#circle);	 
+}
+
+symbol.hexagon {
+	kite9-template: url(template.svg#hexagon);
+}
+
+symbol.diamond {
+	kite9-template: url(template.svg#diamond);
+}
+
+symbol.square {
+	kite9-template: url(template.svg#square);
+}
+
+text-line, k9-text, boldText, bodyText {
+	kite9-type: container;
+	kite9-sizing: maximize;
+	kite9-padding-top: 2px;
+	kite9-padding-bottom: 2px;
+	kite9-padding-left: 0px;
+	kite9-padding-right: 0px;
+	kite9-margin: 0 0 0 0; 
+	kite9-vertical-align: top;
+	kite9-connection-align: 50%;
+}
+
+text-line, k9-text, bodyText {
+	kite9-horizontal-align: left;
+	kite9-template: url(template.svg#generic-text);
+}
+
+boldText {
+	kite9-template: url(template.svg#bold-text);
+	kite9-horizontal-align: center;
+}
+
+
+
+/* Arrow */
+arrow {
+	kite9-padding: 3px 5px 3px 5px; 
+	kite9-margin: 10 10 10 10; 
+	kite9-type: container;
+	kite9-sizing: minimize;
+	kite9-template: url(template.svg#arrow);
+	kite9-connections: separate;
+	kite9-connection-align: 50%;
+	kite9-link-inset: 4px;
+}
+
+
+arrow > label {
+	kite9-type: container;
+	kite9-sizing: minimize;
+	kite9-template: url(template.svg#arrow-label-text);
+	kite9-horizontal-align: center;
+	kite9-vertical-align: center;
+}
+
+arrow > label > contents {
+	kite9-horizontal-align: center;
+	kite9-vertical-align: center;
+}
+
+/* Classes And Styles */
+
+.copyright {
+	font-weight: normal;
+	font-size: 12px;
+	stroke: black;
+}
+
+.symbol {
+	font-size: 10px;
+	font-family: "opensans-bold-webfont";
+	fill: white;
+	stroke: none;
+}
+
+.symbol-text {
+	fill: white; 
+	font-family: opensans-regular-webfont; 
+	font-size: 8px; 
+	text-anchor: middle;
+}
+
+.context-back {
+	fill: none;
+	stroke: black;
+	stroke-width: 1px;
+}
+
+.cell-edge {
+	stroke: #BBBBBB;
+	stroke-width: .5px;
+	fill: none;
+}
+
+.grid-back {
+	stroke: none;
+	fill: white;
+}
+
+.grid-frame {
+	stroke: black;
+	stroke-width: 1px;	
+	fill: none;
+}
+
+.container-label-front {
+	stroke-width: 0;
+	font-size: 11px;
+	font-family: "opensans-light-webfont";
+	fill: white;
+}
+
+.container-label-back {
+	fill: #777;	
+}
+
+.connection-label-front {
+	stroke-width: 0;
+	font-size: 11px;
+	font-family: "opensans-light-webfont";
+	fill: white;
+}
+
+.connection-label-back {
+	fill: #777;	
+}
+
+.glyph-back {
+	stroke-width: 1px;
+	stroke: black;
+	fill: white;
+}
+
+.glyph-label-text {
+	font-size: 15px;
+	fill: black;
+	font-family: "opensans-regular-webfont";
+	stroke: none;
+}
+
+.arrow-label-text {
+	fill: white;
+	stroke: none;
+	font-size: 12px;
+	font-family: "opensans-regular-webfont";
+}
+
+.glyph-stereotype-text {
+	font-family: "opensans-bold-webfont";
+	font-size: 12px;
+	fill: black;
+	stroke: none;
+	kite9-padding: 2px 2px 2px 2px; 
+}
+
+.generic-text {
+	stroke: none;
+	fill: black;
+	font-family: "opensans-regular-webfont";
+	text-align: start;	
+	font-size: 10px;
+}
+
+.bold-text {
+	stroke: none;
+	fill: black;
+	font-family: "opensans-bold-webfont";
+	text-align: start;	
+	font-size: 10px;
+}
+
+.red {
+	font-size: 25px;
+	fill: red;
+}
+
+.diagram {
+	fill: none;
+}
+
+.key-back {
+	fill: #ebebeb;
+}
+
+.link {
+	stroke: black;
+	stroke-width: 2px;
+	fill: none;
+}
+
+
+
+/** Marker Classes */
+
+.diamond-marker {
+	fill: black;
+	stroke: black;
+	stroke-width: 1px;
+}
+
+.arrow-marker {
+	fill: black;
+	stroke-width: 1px; 
+	stroke: black; 
+}
+
+.circle-marker {
+	fill: black;
+	stroke: none;
+}
+
+.open-diamond-marker {
+	fill: white;
+	stroke: black;
+	stroke-width: 1px;
+}
+
+.barbed-arrow-marker {
+	stroke-width: 1px; 
+	stroke: black; 
+	fill: none;
+}
+
+.open-arrow-marker {
+	stroke-width: 1px; 
+	stroke: black; 
+	fill: white;
 }
