--- a/src/test/resources/stylesheets/designer-with-script.css
+++ b/src/test/resources/stylesheets/designer-with-script.css
@@ -15,6 +15,8 @@
 	src: url('../fonts/opensans-regular-webfont.ttf') format('truetype');
 }
 
+@defs url('template.svg');
+
 /*
  * Required so we can process old XML content
  */
