--- a/src/test/resources/stylesheets/designer.css
+++ b/src/test/resources/stylesheets/designer.css
@@ -13,6 +13,8 @@
 	src: url('../fonts/opensans-regular-webfont.ttf') format('truetype');
 }
 
+@defs url(template.svg);
+
 /*
  * Required so we can process old XML content
  */
